added more data

--- a/TestDriveKaro/templates/basic.html
+++ b/TestDriveKaro/templates/basic.html
@@ -16,7 +16,7 @@
 
 
     <!------ Include the above in your HEAD tag ---------->
-    <meta name="keywords" content="Bootstrap 4 Free Carousel, Free Slider, Bootstrap 4 Slider for freee, Free Bootstrap 4 Slider, Free HTML Slider">
+    <meta name="keywords" content="Car driving, car booking , one stop shop, every cars, latest cars, top brands,">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -36,6 +36,8 @@
 
     <!-- it is title  -->
     <title>{% block title %} {% endblock %}</title>
+
+    {% block css %} {% endblock %}
 
 
     <style>
@@ -106,7 +108,6 @@
             bottom: 0px;
             width: 100%;
             padding: 40px 0;
-            bottom: 0px;
             width: 100%;
             color: #fff;
             background-color: #000;
@@ -1070,7 +1071,7 @@
     </script>
     <script>
         /* When the user clicks on the button,
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                toggle between hiding and showing the dropdown content */
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        toggle between hiding and showing the dropdown content */
         function myFunction() {
             document.getElementById("myDropdown").classList.toggle("show");
         }
